# termoworkaround-rs

./: Cargo.toml
lib/: 5_letters.txt
src/: main.rs
