[package]
name = "termoworkaround-rs"
version = "0.1.0"
edition = "2021"
authors = ["danitw <danidevpy@gmail.com>", "lucianostuart <lucianosstuart@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
regex = "1.5"
